cmake_minimum_required(VERSION 2.8)
project(lex)
SET(CMAKE_CXX_COMPILER_ENV_VAR "CXX")
SET(CMAKE_CXX_FLAGS "-std=c++11")
include_directories(include)
file(GLOB_RECURSE lex_source_files "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
add_library(lex STATIC ${lex_source_files}) 
add_executable(lextest ${lex_source_files})
install(TARGETS lextest RUNTIME DESTINATION bin)
